--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,5 +9,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: Swatinem/rust-cache@v1
       - run: cargo fmt --all -- --check
-      - run: cargo clippy --locked --workspace --all-features --all-targets -- -D warnings
-      - run: cargo test --locked --workspace --all-features
+      - run: |
+          features=("" "linux_5-5" "linux_5-7")
+          for feature in "${features[@]}"; do
+              echo testing feature $features
+              # Need to use this syntax for `feature` so that it correctly passes the empty string.
+              cargo clippy --locked --workspace --all-targets --no-default-features --features "${feature[@]}" -- -D warnings
+              cargo test --locked --workspace --no-default-features --features "${feature[@]}"
+          done
